--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1> My </h1>
+        <h1 style="color:blue"> My </h1>
         <h2> My 2 </h2>
         Hello, World!
     </body>
